Combined portfolio and works section

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script>
+      (function () {
+        emailjs.init('user_YLDx9Bgpmsod9LTBs5eYf');
+      })();
+    </script>
+
     <title>Francis Lesui</title>
     <style>
       * {
